see-todos-component top spacing fixed

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,8 +2,8 @@
 
 .logo-picture {
   display: flex;
-  height: 65px;
-  width: 65px;
+  height: 60px;
+  width: 60px;
 }
 
 .top-nav {
